Changed getFirst to get(0) just to be safe